[gd_scene load_steps=3 format=3 uid="uid://durb02oav410a"]

[ext_resource type="Theme" uid="uid://bxakjwkc4gbrj" path="res://themes/main_menu_theme.tres" id="1_8hqex"]
[ext_resource type="Script" uid="uid://dkgoorscdx5l2" path="res://scripts/main_panel.gd" id="1_qq1u4"]

[node name="MainPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 376.0
offset_top = 24.0
offset_right = -376.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_8hqex")
script = ExtResource("1_qq1u4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="StartGame" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options
"

[node name="Credits" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Credits"

[connection signal="button_down" from="MarginContainer/VBoxContainer/StartGame" to="." method="_on_start_game_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_button_down"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/Credits" to="." method="_on_credits_button_down"]
